<resources>
    <string name="app_name">GGF</string>
    <string name="f1_button">Help</string>
    <string name="s_button">Settings</string>
    <string name="go_button">Go it</string>
    <string name="m_button_off"><![CDATA[<—— ]]></string>
    <string name="m_button_on"><![CDATA[ ——>]]></string>
    <string name="enter_name">Введите имя набора</string>
    <string name="enter_ID">Введите ID</string>
    <string name="enter_product">Введите название продукта</string>
    <string name="enter_number">Введите количество продукта</string>
    <string name="bug_apologise">We apologise for this, but seeing this on your screen means the mistake of one of coders of this app. It\'s likely that you make a screenshot showing all elements around this one and press that beautiful button beyond to report a bug before doing anything else in this app. \n(If you do so, we will be thankful) \n[Admins]</string>
    <string name="report_a_bug"><![CDATA[REPORT A BUG (<5 min)]]></string>
    <string name="comment2">0</string>
    <string name="comment1">100</string>
    <string name="name1">Имя набора</string>
    <string name="name2">ID набора</string>
    <string name="name3">"Продуктов в наборе: "</string>
    <string name="name4">"Масса набора: "</string>
    <string name="name5">Пищевая ценность набора</string>
    <string name="name6">Список продуктов</string>
    <string name="name7">Белки</string>
    <string name="name8">Жиры</string>
    <string name="name9">Углеводы</string>
    <string name="random_button">R</string>
    <string name="enter_g">" г "</string>
    <string name="comment3">Some product here..</string>
    <string name="name10">Название продукта</string>
    <string name="name11">ID продукта</string>
    <string name="name12">Количество продукта</string>
    <string name="enter_ml">" мл "</string>
    <string name="enter_g_ml">" г/мл "</string>
    <string name="name13">"Количество порций: "</string>
    <string name="enter_num">" шт "</string>
    <string name="auto_button">A</string>
    <string name="name14">Полная цена продукта</string>
    <string name="enter_rub">" ₽ "</string>
    <string name="name15">Цена за 100 г</string>
    <string name="name16">Класс продукта</string>
    <string name="name17">"Пищевая ценность в "</string>
    <string name="name18">Массовая доля жира</string>
    <string name="enter_percent">" % "</string>
    <string name="name19">"Энергетическая ценность в "</string>
    <string name="enter_kkal">" ккал "</string>
    <string name="enter_kdg">" кдж "</string>
    <string name="name20">This page is currently in development. This won\'t be empty in the near future, so it is now (Snowbell is here, he guards this page till I come and fix it. Don\'t worry about Snowbell, he won\'t hurt a bug...)</string>
    <string name="name21">Магазин</string>
    <string name="name22">Продукты</string>
    <string name="name23">Перейти к списку продуктов</string>
    <string name="name24">Список продуктов</string>
    <string name="comment4">Some shop here..</string>
    <string name="name25">Вернуться к выбору магазина</string>
    <string name="help_button">ПОМОЩЬ</string>
    <string name="settings_button">Настройки</string>
    <string name="chose_button">Выбрать</string>
    <string name="delete_comment_1">Для проверяющих Samsung ITAcademy</string>
    <string name="delete_comment_2">При нажатии на элемент списка ниже будет открываться соответствующая ему страница. Данный список -- все реализованные страницы:...</string>
    <string name="delete_comment_3">\n# Главное меню (вы уже тут (это некликабельно))\n</string>
    <string name="delete_comment_4">\n# Меню выбора варианта составления списка покупок\n</string>
    <string name="delete_comment_5">\n# меню редактирования списка покупок (сильно не доделано)\n</string>
    <string name="delete_comment_6">\n# Отображение списка покупок (сильно не доделано)\n</string>
    <string name="delete_comment_7"># Заглушка для тех ссылок на новые страницы, которые хочется протестировать (или написание которых в будущем будет занимать время, при том сам элемент, в котором по матириал дизайну должна быть ссылка, включить в приложение будет нужно)\n\n</string>
    <string name="delete_comment_8">\n# Редактор конкретного продукта\n</string>
    <string name="delete_comment_9">\n# Редактор корзины (корзина -- единица, используемая для создания списка покупок)\n</string>
    <string name="delete_comment_10">[замечание: один из элементов ниже сообщает об ошибке, предлагая репортнуть её. Этот элемент включен умышленно для показа его существования и работоспособности]</string>
    <string name="settings_1">set</string>
    <string name="smth_1">What caffee has the best TMN index?</string>
    <string name="smth_2">saved carts or carts you did not complete</string>
    <string name="comment5">What\'s here?ah?.. Nothing?..(\n...\n...\n...\n...\nok, there is something here, hurry, or it will die soon!</string>
    <string name="comment6">plan to go KFC instead having a dinner while busy</string>
    <string name="name_of_product">Продукт</string>
    <string name="cost_of_product">Цена</string>
    <string name="delete_comment_11">Подождите! Список загружается. Если загрузка происходит слишком долго - обновите страницу.</string>
    <string name="total_cost">Общая стоимость: </string>
    <string-array name="list_of_classes">
        <item>Мясо</item>
        <item>Рыба</item>
        <item>Молоко</item>
        <item>Орехи</item>
    </string-array>
    <string-array name="list_of_shops">
        <item>Окей</item>
        <item>Billa</item>
        <item>Eurospar</item>
        <item>Красное и белое</item>
    </string-array>

</resources>
