<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPage0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|fill_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|left"
                    android:text="@string/name21"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner2_11"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:entries="@array/list_of_shops"
                        android:gravity="bottom|left" />

                    <ImageButton
                        android:id="@+id/button2_11"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:foreground="@drawable/ic_next_009182"
                        android:foregroundGravity="center"/>

                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="9" />

                <TextureView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom|left"
                    android:text="@string/name22"
                    android:textAlignment="gravity"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText2_11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:hint="@string/enter_product"
                        android:textAlignment="textStart"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/button2_12"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:foreground="@drawable/ic_search_009182"
                        android:foregroundGravity="center"/>

                </LinearLayout>

                <ListView
                    android:id="@+id/list2_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="9" />

                <TextureView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp"
                    android:layout_weight="9" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center|center">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:gravity="bottom|left"
                        android:text="@string/name23"
                        android:textAlignment="gravity"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/button2_13"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:foreground="@drawable/ic_next_009182"
                        android:foregroundGravity="center"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>